--- a/.github/workflows/check-code.yaml
+++ b/.github/workflows/check-code.yaml
@@ -13,9 +13,13 @@ jobs:
         with:
           node-version: 18
 
-      - name: Install all dependencies
+      - name: Install repository dependencies
         run: npm install
         
       - run: cd client
-      - run: npm test
+
+      - name: Install all client dependencies
+        run: npm install
+
+      - run: npm run test
       - run: npm run lint-staged
