--- a/.github/workflows/check-code.yaml
+++ b/.github/workflows/check-code.yaml
@@ -17,6 +17,7 @@ jobs:
         run: npm install
         
       - run: cd client
+      - run: pwd
 
       - name: Install all client dependencies
         run: npm install
