--- a/.github/workflows/check-code.yaml
+++ b/.github/workflows/check-code.yaml
@@ -4,8 +4,11 @@ on: [push]
 jobs:
   code-checker:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: client
     steps:
-      - name: Checkout under $GITHUB_WORKSPACE
+      - name: Checkout main
         uses: actions/checkout@main
 
       - name: Set up NodeJS
@@ -15,9 +18,6 @@ jobs:
 
       - name: Install repository dependencies
         run: npm install
-        
-      - run: cd client
-      - run: pwd
 
       - name: Install all client dependencies
         run: npm install
