feat: Add test action and build

--- a/.github/workflows/check-code.yaml
+++ b/.github/workflows/check-code.yaml
@@ -24,3 +24,6 @@ jobs:
 
       - name: Run LintStaged ✅
         run: npm run lint-staged
+
+      - name: Build project
+        run: npm run build
