--- a/.github/workflows/deploy-firebase.yaml
+++ b/.github/workflows/deploy-firebase.yaml
@@ -17,7 +17,10 @@ jobs:
           node-version: 18
 
       - name: Install dependencies and build
-        run: npm ci && npm run build
+        run: npm install
+
+      - name: Build project
+        run: CI= npm run build
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
