--- a/.github/workflows/deploy-firebase.yaml
+++ b/.github/workflows/deploy-firebase.yaml
@@ -24,7 +24,7 @@ jobs:
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          entrypoint: /client
+          entrypoint: ./client
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_GIFAFFINITY_D109C }}'
           projectId: gifaffinity-d109c
